--- a/Echo.csproj
+++ b/Echo.csproj
@@ -1,18 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>Echo</RootNamespace>
     <UseWPF>true</UseWPF>
     <ApplicationIcon />
     <StartupObject>Echo.Program</StartupObject>
-    
+
+    <Platform>Any CPU</Platform>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
-    <PublishReadyToRun>true</PublishReadyToRun>
+    <SelfContained>false</SelfContained>
+    <PublishSingleFile>True</PublishSingleFile>
+    <PublishReadyToRun>False</PublishReadyToRun>
     <AssemblyName>Echo</AssemblyName>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="WebApp\dist\bundle.js" />
+    <EmbeddedResource Include="WebApp\dist\preload.js" />
+    <EmbeddedResource Include="WebApp\public\index.html" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.864.35" />
@@ -41,23 +48,5 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="src\WebApp\dist\bundle.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="src\WebApp\public\index.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="WebApp\dist\bundle.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="WebApp\dist\preload.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="WebApp\public\index.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
