--- a/Echo.csproj
+++ b/Echo.csproj
@@ -4,16 +4,18 @@
     <RootNamespace>Echo</RootNamespace>
     <UseWPF>true</UseWPF>
     <ApplicationIcon />
+    <ApplicationManifest>app.manifest</ApplicationManifest>
     <StartupObject>Echo.Program</StartupObject>
 
+    <AssemblyName>Echo</AssemblyName>
     <Platform>Any CPU</Platform>
     <TargetFramework>net5.0-windows</TargetFramework>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <SelfContained>false</SelfContained>
+    <SelfContained>true</SelfContained>
     <PublishSingleFile>True</PublishSingleFile>
-    <PublishReadyToRun>False</PublishReadyToRun>
-    <AssemblyName>Echo</AssemblyName>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <PublishReadyToRun>True</PublishReadyToRun>
+    <IncludeAllContentForSelfExtract>True</IncludeAllContentForSelfExtract>
+    <PublishTrimmed>False</PublishTrimmed>
   </PropertyGroup>
   
   <ItemGroup>
