--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack --config webpack.config.js"
+    "webpack": "webpack --config webpack.config.js",
+    "serve": "webpack-cli serve"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +21,8 @@
     "css-loader": "^5.2.6",
     "style-loader": "^3.0.0",
     "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
