--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -33,7 +33,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.6"
+    "react-virtuoso": "^1.10.6"
   }
 }
